styles/style.css
:root {
    --color-primario: #ceeade;
    --color-secundario: #4AAD84;
    --color-terciario: #22503D;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}


html {
    scroll-behavior: smooth;
    scrollbar-color: var(--color-terciario) transparent;
}

body {
    font-family: "Libertinus Serif", serif;
    overflow-x: hidden;
}

a {
    text-decoration: none;
    color: inherit;
}

ul {
    list-style: none;
}

li {
    list-style: none;
}

img {
    max-width: 100%;
    height: auto;
    display: block;
}

form,
fieldset,
legend,
label,
input,
textarea {
    margin: 0;
    padding: 0;
    border: none;
    background: none;
    font: inherit;
    color: inherit;
    box-sizing: border-box;
}

input,
textarea {
    width: 100%;
    outline: none;
    background: transparent;
    resize: none;
}

/* GLOBALES */

.subtitle {
    font-size: 3rem;
    text-align: center;
    color: var(--color-terciario);
    border-bottom: 2px solid var(--color-terciario);
}

.sub-subtitle {
    font-size: 1rem;
    text-align: center;
    color: rgb(68, 68, 68);
}

.container {
    max-width: 1400px;
    width: 90%;
    margin: 0 auto;
}

/* HEADER */
.header {
    width: 100%;
    position: sticky;
    top: 0;
    z-index: 50;
    background-color: rgba(255, 255, 255, 0.9);
    backdrop-filter: blur(10px);
}

.header__envio {
    background-color: black;
    padding: .5rem;
}

.header__texto {
    color: white;
    font-size: 1rem;
    text-align: center;
}

.header__navbar {
    position: relative;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: .4rem;
    background-color: white;
    border-bottom: 2px solid var(--color-terciario);
}

.hamburguesa {
    cursor: pointer;
    z-index: 70;
}

.navbar__links {
    position: absolute;
    top: 0;
    padding: 2rem;
    right: -100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 5rem;
    z-index: 70;
    background-color: var(--color-primario);
    box-shadow: 0px 30px 50px 30px rgba(0, 0, 0, .4);
    border-left: .6px solid var(--color-terciario);
    height: 100vh;
    width: 80vw;
    transition: all 250ms ease;
}

.navbar__links.active {
    right: 0;
}

.navbar__link {
    font-size: 1.8rem;
    padding: 1rem;
    border-radius: 15px;
    transition: all 250ms ease;
}

.navbar__link:hover {
    background-color: var(--color-secundario);
}

.navbar__container-logo {
    color: var(--color-terciario);
    display: flex;
    align-items: center;
    gap: 1rem;
    max-width: 50px;
}

.navbar__title {
    font-size: 1.5rem;
    font-weight: bold;
}

.navbar__container-icons {
    color: var(--color-terciario);
    display: flex;
    gap: 1rem;
}

.icons-zindex {
    z-index: 60;
}

.container-icons__icon {
    font-size: 1.2rem;
}

/* MAIN */

/* HERO */

.hero__descuento {
    color: white;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    padding: 1rem;
    height: 30vh;
    background-image:
        linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6)),
        url("../assets/hero-content2.avif");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    gap: 2rem;
}

.descuento__texto {
    font-size: 1.3rem;
    text-align: left;
    position: relative;
}

.descuento__texto::before {
    content: '';
    position: absolute;
    height: 3.5rem;
    width: 2px;
    background-color: white;
    top: 0;
    left: -1.2rem;
}

.hero__icon {
    font-size: 2.5rem;
}

/* GRID */
.grid {
    padding: 4rem 0;
}

.grid__products {
    padding: 2rem 0;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 1rem;

}

.container__product {
    background-color: rgb(226, 226, 226);
    padding: 1rem;
    height: auto;
    border-radius: 10px;
    border: 1px solid rgb(194, 194, 194);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    cursor: pointer;
    transition: all 250ms ease;
}

.container__product:hover {
    transform: scale(1.03);
}

.product__info {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    gap: 1rem;
    margin-top: 1rem;
}

.info__price {
    font-size: 1.8rem;
    font-weight: bold;
    color: var(--color-terciario);
}

.info__btn {
    padding: .3rem .8rem;
    background-color: var(--color-terciario);
    color: white;
    border-radius: 10px;
    font-size: 1.1rem;
    transition: all 250ms ease;
}

.info__btn:hover {
    transform: scale(1.1);
}

.product__container-img {
    max-width: 100%;
    height: auto;
    margin: 0 auto;
    border-bottom: 2px solid var(--color-terciario);
}

.container-img__imagen {
    margin-bottom: 1rem;
}

/* FORM */

.form {
    padding: 4rem 0;
}

.form__subtitle {
    margin-bottom: 3rem;
}

.form__form {
    padding: 1rem;
    margin: 0 auto;
    border: 1px solid var(--color-terciario);
    border-radius: 10px;
    /* height: 500px; */
}

.form__fieldset {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: start;
    gap: 2rem;
}

.form__legend {
    font-size: 1.5rem;
    font-weight: bold;
    margin-bottom: .8rem;
    color: var(--color-terciario);
    position: relative;
}

.form__legend-datos::before {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    height: 1px;
    width: 190px;
    background-color: var(--color-terciario);
}

.form__legend-contact::before {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    height: 1px;
    width: 100px;
    background-color: var(--color-terciario);
}

.form__label {
    font-size: 1.2rem;
    margin-bottom: .3rem;
}

.form__input {
    width: 75%;
    border: 1px solid var(--color-terciario);
    border-radius: 10px;
    padding: .3rem;
    background-color: white;
}

.form__container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 1rem;
}

.form__personal-contacts-container,
.form__contact-container {
    display: flex;
    flex-direction: column;
    width: 100%;
    gap: 1rem;
}

.form__btns {
    margin-top: 1rem;
    display: flex;
    gap: 1rem;
}

.form__btn {
    padding: .5rem 1rem;
    background-color: var(--color-terciario);
    font-size: 1.1rem;
    border-radius: 5px;
    color: white;
    transition: all 250ms ease;
}

.form__btn-clear {
    background-color: white;
    color: var(--color-terciario);
    border: 1px solid var(--color-terciario);
}

.form__btn:hover {
    transform: scale(1.1);
}

/* FOOTER */

.footer{
    position: relative;
    background-color: var(--color-terciario);
    padding: 1rem;
    text-align: center;
    font-size: .8rem;
    display: flex;
    flex-direction: column;
    gap: .5rem;
}

.footer::before {
    content: '';
    position: absolute;
    top: 10px;
    left: 70px;
    border-top: 3px solid white;
    border-left: 3px solid white;
    height: 20px;
    width: 20px;

}

.footer::after {
    content: '';
    position: absolute;
    bottom: 10px;
    right: 70px;
    border-bottom: 3px solid white;
    border-right: 3px solid white;
    height: 20px;
    width: 20px;
}

.footer__container-links {
    display: flex;
    gap: 1rem;
    justify-content: center;
    align-items: center;
}



.footer__icon {
    font-size: 1.5rem;
    color: white;
    transition: all 250ms ease;
}

.footer__icon:hover {
    transform: translateY(-5px);
}

.footer__text{
    color: white;
    font-size: 1rem;
    margin: .3rem 0;
}

